--- a/css/main.css
+++ b/css/main.css
@@ -107,8 +107,12 @@ footer {
     flex-flow: row wrap;
 }
 
-header {
+.content-wrapper {
+    width: 90%;
+}
 
+header {
+    padding: 15px 0;
 }
 
 header .content-wrapper {
@@ -116,23 +120,27 @@ header .content-wrapper {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    margin: 0;
 }
 
 .header-divider {
-
+    width: 100%;
 }
 
 header nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    width: 60%;
+
 }
 
 header nav ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 45%;
 }
 
 footer {
@@ -140,7 +148,12 @@ footer {
 }
 
 footer .content-wrapper {
+    width: 55%;
+    margin: 50px 0;
+}
 
+footer p {
+  margin: 0;
 }
 
 address {
@@ -175,7 +188,9 @@ footer .copyright {
 }
 
 .hero-area .content-wrapper {
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Aside */
@@ -188,11 +203,19 @@ aside {
 }
 
 aside .content-wrapper {
-
+    margin: 30px 0 50px;
 }
 
 aside .form-description {
 
+}
+
+aside p {
+    margin: 0;
+}
+
+aside h3 {
+  margin: 38px 0 18px 0;
 }
 
 aside .signup-form {
@@ -212,12 +235,24 @@ input {
     flex-flow: row wrap;
 }
 
+.features h2 {
+
+}
+
 .features .features-items {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
 
+}
+
+.features article {
+  width: 55%;
+}
+
+.features p {
+  margin: 0;
 }
 
 .features .fontawesome-icon {
@@ -239,6 +274,10 @@ input {
 
 .reviews .content-wrapper {
 
+}
+
+.reviews h3 {
+  width: 80%;
 }
 
 .reviews .review-image {
